--- a/modules/apps/asset/asset-info-impl/build.gradle
+++ b/modules/apps/asset/asset-info-impl/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 	compileOnly project(":apps:asset:asset-info-api")
 	compileOnly project(":apps:info:info-api")
 	compileOnly project(":apps:info:info-taglib")
+	compileOnly project(":apps:layout:layout-page-template-api")
 	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-string")
 }
